--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: bike_theft_check
   liquibase:
-    change-log: classpath://db/changelog/changelog.json
+    change-log: classpath://db/changelog/changelog.xml
   datasource:
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://${POSTGRES_URL:localhost:5432/postgres}
@@ -16,7 +16,6 @@ spring:
       pool-name: datasource-pool-bike
     initialization-mode: always
   jpa:
-    show-sql: true
     database: postgresql
     properties:
       hibernate:
@@ -26,7 +25,16 @@ spring:
             non_contextual_creation: true
     generate-ddl: false
     open-in-view: off
+  task:
+    scheduling:
+      pool:
+        size: 5
+cron:
+  rss: 0 30 3 * * ?
+  parser: 0 0 4 * * ?
 telegram:
-  botPath: ${TGBOT_PATH:https://4e8f-88-118-182-80.ngrok-free.app}
+  botPath: ${TGBOT_PATH:https://4689-88-118-182-80.ngrok-free.app}
   botUsername: ${TGBOT_BOTNAME:BikeTheftCheck}
   botToken: ${TGBOT_TOKEN:6297562865:AAHmoQfoV_d_0u6Om178U5U9ncyOIRM4egk}
+rss:
+  baseUrl: ${RSS_URL:https://veloby.net/stolen-bikes/rss}
