--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <gmavenplus-plugin.version>2.1.0</gmavenplus-plugin.version>
         <jacoco.version>0.8.10</jacoco.version>
         <emoji.version>5.1.1</emoji.version>
+        <jsoup.version>1.16.1</jsoup.version>
+        <rome.version>1.0</rome.version>
     </properties>
     <dependencies>
         <dependency>
@@ -51,7 +53,16 @@
             <artifactId>emoji-java</artifactId>
             <version>${emoji.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>rome</groupId>
+            <artifactId>rome</artifactId>
+            <version>${rome.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
