--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ cron:
   rss: 0 30 3 * * ?
   parser: 0 0 4 * * ?
 telegram:
-  botPath: ${TGBOT_PATH:https://4689-88-118-182-80.ngrok-free.app}
+  botPath: ${TGBOT_PATH:https://21b9-88-118-182-80.ngrok-free.app}
   botUsername: ${TGBOT_BOTNAME:BikeTheftCheck}
   botToken: ${TGBOT_TOKEN:6297562865:AAHmoQfoV_d_0u6Om178U5U9ncyOIRM4egk}
 rss:
