--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,6 +25,9 @@ jobs:
     steps:
       - name: Checkout the repo 
         uses: actions/checkout@v2
+
+      - name: Maven build
+        run: mvn clean install
         
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
