--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,7 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo 
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+        run: java HelloWorldApp.java
 
       - name: Maven build
         run: mvn clean install
