--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,8 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo 
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+        uses: actions/checkout@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '17'
