--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Checkout the repo 
         uses: actions/checkout@v2
+
+      - name: Added Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
