--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,15 +23,13 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repo 
-        uses: actions/checkout@v2
-
-      - name: Added Java 17
-        uses: actions/setup-java@v3
+      - name: Checkout the repo
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
+          distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '17'
-        run: java HelloWorldApp.java
+      - run: java HelloWorldApp.java
 
       - name: Maven build
         run: mvn clean install
