--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,11 +25,13 @@ jobs:
     steps:
       - name: Checkout the repo
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+
+      - name: Java install
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '17'
-      - run: java HelloWorldApp.java
+        run: java HelloWorldApp.java
 
       - name: Maven build
         run: mvn clean install
