--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,18 +23,14 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repo
       - uses: actions/checkout@v3
-
-      - name: Java install
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
+          distribution: 'temurin'
           java-version: '17'
-        run: java HelloWorldApp.java
-
-      - name: Maven build
-        run: mvn clean install
+          cache: 'maven'
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
         
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
