--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,8 @@ spring:
 cron:
   parser: 0 0 4 * * ?
 telegram:
-  botPath: ${TGBOT_PATH:https://1e79-88-118-182-80.ngrok-free.app}
-  botUsername: ${TGBOT_BOTNAME:bot}
-  botToken: ${TGBOT_TOKEN:token}
+  botPath: ${TGBOT_PATH:https://321e-88-118-182-80.ngrok-free.app}
+  botUsername: ${TGBOT_BOTNAME:BikeTheftCheck_bot}
+  botToken: ${TGBOT_TOKEN:6297562865:AAHmoQfoV_d_0u6Om178U5U9ncyOIRM4egk}
 rss:
   baseUrl: ${RSS_URL:https://veloby.net/stolen-bikes/rss}
